# C2OT

./: .gitignore  LICENSE  README.md  eval.py  moons.py  pyproject.toml  train.py
c2ot/: eval.py  evaluate.py  ot.py  runner.py
c2ot/config/: base_config.yaml  cifar_train.yaml
c2ot/data/: data_setup.py  memmap_images.py  utils.py
c2ot/model/: unet.py  unet_utils.py
c2ot/utils/: dist_utils.py  gen_utils.py  log_integrator.py  logger.py  playground_utils.py
config/: base_config.yaml  cifar.yaml  cifar_train.yaml  imagenet32.yaml  imagenet32_train.yaml
docs/: index.html
scripts/: extract_clip.py  make_memmap.py
